# disco

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  README.txt  index.html  params.json
disco/: CMakeLists.txt  disco.h
disco/framework/: Activity.h  BaseNotifiee.cpp  BaseNotifiee.h  CMakeLists.txt  DiscoLog.cpp  DiscoLog.h  Exception.cpp  Exception.h  Log.h  Minutes.cpp  Minutes.h  NamedInterface.h  Nominal.h  Ptr.cpp  Ptr.h  PtrInterface.h  Seconds.cpp  Seconds.h  Time.h  framework.h
disco/modeling/: CMakeLists.txt  Force.h  Frame.h  Point.h  RigidBody.cpp  RigidBody.h  System.h  modeling.h
disco/value/: CMakeLists.txt  Fundamental.h  Inertia.h  Tensor.h  value.h
doc/: Documentation.h  Doxyfile  doxygen_disco.css
examples/bicycle/: bicycle.cpp
examples/doublependulum/: doublependulum.cpp
include/disco/modeling/: Force.h  Joint.h  RigidBody.h  System.h
include/disco/value/: Mass.h  Tensor.h
include/framework/: Activity.h  BaseNotifiee.h  Exception.h  Log.h  LogImpl.h  Nominal.h  Ptr.h  PtrInterface.h
include/fwk/: NamedInterface.h  Ptr.h  PtrInterface.h
src/: Body.cpp
src/framework/: Exception.cpp  LogImpl.cpp  Ptr.cpp
tests/: CMakeLists.txt  testFramework.cpp  testInterface.cpp  testModeling.cpp  testValues.cpp
