# file(GLOB DISCO_VALUE_SOURCES *.cpp)
# file(GLOB DISCO_VALUE_HEADERS *.h)
# 
# add_library(${CMAKE_PROJECT_NAME}value SHARED
#     ${DISCO_VALUE_SOURCES}
#     ${DISCO_VALUE_HEADERS})
# 
# install(
#     TARGETS ${CMAKE_PROJECT_NAME}value
#     DESTINATION ${DISCO_SHARED_LIBRARY_DESTINATION}
#     )
